--- a/Views/Product/Index.cshtml
+++ b/Views/Product/Index.cshtml
@@ -1,4 +1,4 @@
-@model IEnumerable<Product>
+@model ProductViewModel
 
 @{
     ViewData["Title"] = "Sản phẩm";
@@ -34,16 +34,15 @@
                         <i class="category__heading-icon fa-solid fa-list"></i>
                         Danh mục
                     </h3>
-
                     <ul class="category-list">
                         <li class="category-item category-item--active">
-                            <a href="#" class="category-item__link">Trang điểm mắt</a>
+                            <a href="#" class="category-item__link">Tai nghe Bluetooth</a>
                         </li>
                         <li class="category-item">
-                            <a href="#" class="category-item__link">Trang điểm môi</a>
+                            <a href="#" class="category-item__link">Loa</a>
                         </li>
                         <li class="category-item">
-                            <a href="#" class="category-item__link">Trang điểm mặt</a>
+                            <a href="#" class="category-item__link">Sạc dự phòng</a>
                         </li>
                     </ul>
                 </nav>
@@ -59,7 +58,6 @@
                             Giá
                         </span>
                         <i class="select-input-icon fa-solid fa-chevron-down"></i>
-
                         <!--List options-->
                         <ul class="select-input__list">
                             <li class="select-input__item">
@@ -131,9 +129,9 @@
                     <!--Grid -> Row -> Column-->
                     <div class="row sm-gutter ">
                         <!--Product item-->
-                        @foreach (var products in Model) {
+                        @foreach (var products in Model.Products) {
                             <div class="col l-2-4 c-6 m-4">
-                                <a class="home-product-item" href="">
+                                <a class="home-product-item" href="/Product/Detail/@products.PK_iProductID">
                                     <div class="home-product-item__img"
                                         style="background-image: url(/img/@products.sImageUrl);"></div>
                                     <h4 class="home-product-item__name">@products.sProductName
