--- a/Views/User/Login.cshtml
+++ b/Views/User/Login.cshtml
@@ -2,7 +2,7 @@
     Layout = "_UserLayout";
     ViewData["Title"] = "Đăng ký";
 }
-<!--Register form-->
+<!--Login form-->
 <div class="app__container">
     <div class="auth">
         <div class="auth__content">
@@ -12,7 +12,7 @@
             <div class="auth-form">
                 <form action="/User/Login" method="post" class="auth-form__container">
                     <div class="auth-form__header">
-                        <h3 class="auth-form__heading">Đăng ký</h3>
+                        <h3 class="auth-form__heading">Đăng nhập</h3>
                         @* <span class="auth-form__switch-btn"><i class="fa-solid fa-xmark auth-form__close"></i></span> *@
                     </div>
                     <div class="auth-form__form">
@@ -20,10 +20,8 @@
                             <input type="text" name="email" id="" class="auth-form__input" placeholder="Email của bạn">
                         </div>
                         <div class="auth-form__group">
-                            <input type="password" name="password" id="" class="auth-form__input" placeholder="Mật khẩu của bạn">
-                        </div>
-                        <div class="auth-form__group">
-                            <input type="password" name="password" id="" class="auth-form__input" placeholder="Nhập lại mật khẩu">
+                            <input type="password" name="password" id="" class="auth-form__input"
+                                placeholder="Mật khẩu của bạn">
                         </div>
                     </div>
                     <div class="auth-form__aside">
@@ -57,3 +55,4 @@
         </div>
     </div>
 </div>
+
