--- a/wwwroot/css/styles.css
+++ b/wwwroot/css/styles.css
@@ -1119,7 +1119,7 @@
     will-change: transform;
 }
 
-    .category-item:hover {
+    .category-item-home:hover {
         transform: translateY(-1px);
         box-shadow: 0 1px 20px 0 rgba(0,0,0,0.05);
     }
