--- a/Views/User/Register.cshtml
+++ b/Views/User/Register.cshtml
@@ -17,13 +17,13 @@
                     </div>
                     <div class="auth-form__form">
                         <div class="auth-form__group">
-                            <input type="text" name="email" id="" class="auth-form__input" placeholder="Email của bạn">
+                            <input type="text" name="email" id="" class="auth-form__input" placeholder="Email của bạn" />
                         </div>
                         <div class="auth-form__group">
-                            <input type="password" name="password" id="" class="auth-form__input" placeholder="Mật khẩu của bạn">
+                            <input type="password" name="password" id="" class="auth-form__input" placeholder="Mật khẩu của bạn" />
                         </div>
                         <div class="auth-form__group">
-                            <input type="password" name="password" id="" class="auth-form__input" placeholder="Nhập lại mật khẩu">
+                            <input type="password" name="password" id="" class="auth-form__input" placeholder="Nhập lại mật khẩu" />
                         </div>
                     </div>
                     <div class="auth-form__aside">
